# zedit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/linux/: zedit.desktop
assets/logo/: zedit.icns
cmake/: CompilerWarnings.cmake  EmbedBinary.cmake  FetchDeps.cmake  Packaging.cmake  TreeSitterGrammar.cmake
core/: CMakeLists.txt
core/include/zedit/core/: command_line.hpp  config.hpp  cursor.hpp  diff.hpp  editor.hpp  file_io.hpp  fuzzy_match.hpp  git_diff.hpp  highlight.hpp  json_rpc.hpp  languages.hpp  lsp.hpp  markdown_highlighter.hpp  mode.hpp  mode_state_machine.hpp  motion.hpp  operator.hpp  piece_table.hpp  registers.hpp  search.hpp  subprocess.hpp  treesitter_highlighter.hpp  update_check.hpp  version.hpp  word_wrap.hpp
core/src/: capture_kind.hpp  command_line.cpp  config.cpp  diff.cpp  editor.cpp  file_io.cpp  fuzzy_match.cpp  git_diff.cpp  json_rpc.cpp  languages.cpp  lsp.cpp  markdown_highlighter.cpp  mode_state_machine.cpp  motion.cpp  operator.cpp  piece_table.cpp  search.cpp  subprocess.cpp  treesitter_highlighter.cpp  update_check.cpp  version.cpp  word_wrap.cpp
frontend_imgui/: CMakeLists.txt
frontend_imgui/src/: app.cpp  app.hpp  command_palette.cpp  command_palette.hpp  file_dialog.cpp  file_dialog.hpp  file_finder.cpp  file_finder.hpp  find_replace_dialog.cpp  find_replace_dialog.hpp  font_manager.cpp  font_manager.hpp  input_map.cpp  input_map.hpp  main.cpp  menu_bar.cpp  menu_bar.hpp  recent_files.cpp  recent_files.hpp  status_line.cpp  status_line.hpp  tab_bar.cpp  tab_bar.hpp  text_view.cpp  text_view.hpp  theme.cpp  theme.hpp  toolbar.cpp  toolbar.hpp  update_checker.cpp  update_checker.hpp
tests/: CMakeLists.txt
tests/core/: test_auto_indent.cpp  test_bracket_match.cpp  test_command_line.cpp  test_config.cpp  test_config_integration.cpp  test_ctrl_shortcuts.cpp  test_diff.cpp  test_diff_command.cpp  test_dot_repeat.cpp  test_editor.cpp  test_editor_lsp.cpp  test_file_io.cpp  test_find_replace.cpp  test_fuzzy_match.cpp  test_gedit_style.cpp  test_git_diff.cpp  test_highlight.cpp  test_json_rpc_framing.cpp  test_json_rpc_transport.cpp  test_json_smoke.cpp  test_line_navigation.cpp  test_lsp_clangd.cpp  test_more_languages.cpp  test_motion.cpp  test_multi_buffer.cpp  test_named_registers.cpp  test_normal_mode_operators.cpp  test_operator.cpp  test_piece_table.cpp  test_search.cpp  test_search_mode.cpp  test_sort_lines.cpp  test_subprocess.cpp  test_treesitter_highlighter.cpp  test_treesitter_smoke.cpp  test_update_check.cpp  test_version.cpp  test_visual_mode.cpp  test_windows.cpp  test_word_wrap.cpp
