add_executable(zedit_tests
  core/test_version.cpp
  core/test_piece_table.cpp
  core/test_command_line.cpp
  core/test_editor.cpp
  core/test_motion.cpp
  core/test_operator.cpp
  core/test_normal_mode_operators.cpp
  core/test_visual_mode.cpp
  core/test_search.cpp
  core/test_search_mode.cpp
  core/test_named_registers.cpp
  core/test_multi_buffer.cpp
  core/test_dot_repeat.cpp
  core/test_highlight.cpp
  core/test_treesitter_smoke.cpp
  core/test_treesitter_highlighter.cpp
  core/test_more_languages.cpp
  core/test_windows.cpp
  core/test_diff.cpp
  core/test_diff_command.cpp
  core/test_json_smoke.cpp
  core/test_json_rpc_framing.cpp
  core/test_subprocess.cpp
  core/test_json_rpc_transport.cpp
  core/test_lsp_clangd.cpp
  core/test_editor_lsp.cpp
  core/test_config.cpp
  core/test_config_integration.cpp
  core/test_ctrl_shortcuts.cpp
  core/test_line_navigation.cpp
  core/test_file_io.cpp
  core/test_auto_indent.cpp
)

target_link_libraries(zedit_tests PRIVATE
  zedit_core
  Catch2::Catch2WithMain
  zedit_warnings
)

include(CTest)
include(Catch)
catch_discover_tests(zedit_tests)
